2017-02-04  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>

	* DESCRIPTION (Version, Date): Release 0.1.1

2017-01-31  Dirk Eddelbuettel  <edd@debian.org>

	* R/nanotime.R: One more updated format string

2017-01-30  Dirk Eddelbuettel  <edd@debian.org>

	* R/nanotime.R (format.nanotime): Safer transformation to double
	(index2char.nanotime): Idem

2017-01-29  Dirk Eddelbuettel  <edd@debian.org>

	* R/nanotime.R: Additional documentation section on default output
	format string

	* .travis.yml (before_install): Use https for curl fetch

2017-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* R/nanotime.R (nanotime.character): Display of nine dec digits
	(format.nanotime): Idem
	(print.nanotime): Dispatch to format.nanotime (thanks, Matt!)
	(as.integer64.nanotime): New converter to integer64
	(Ops.nanotime): Explicit definition with some casts

	* NAMESPACE: Corresponding exports
	* man/nanotime.Rd: Corresponding documentation

2017-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.0

2017-01-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* DESCRIPTION (SystemRequirements, OS_type): Remove constraint on
	Unix as RcppCCTZ is now available on Windows too

	* demo/nanosecondDelayExample.R: Add missing library() calls; added
	save and reload example

	* README.md: Small edit showing save and reload

2016-12-22  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated to reflect CRAN status

2016-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* demo/00Index: New file, demo now in package
	* demo/nanosecondDelayExample.R: Renamed demo

2016-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* R/nanotime.R (as.data.frame.nanotime): Documented
	(nanotime.character): Support tz and fmt options
	(format.nanotime): Idem
	(index2char.nanotime): Idem
	(as.POSIXct.nanotime): Idem
	(as.POSIXlt.nanotime): Idem

	* man/nanotime.Rd: Idem
