@@ -1,8 +1,8 @@
 Package: nanotime
 Type: Package
 Title: Nanosecond-Resolution Time for R
-Version: 0.1.1
-Date: 2017-02-04
+Version: 0.1.2
+Date: 2017-03-27
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: Full 64-bit resolution date and time support with resolution up
@@ -11,8 +11,8 @@ Description: Full 64-bit resolution date and time support with resolution up
 Imports: bit64, RcppCCTZ (>= 0.2.0), zoo
 Suggests: data.table
 License: GPL (>= 2)
-RoxygenNote: 6.0.0
+RoxygenNote: 6.0.1
 NeedsCompilation: no
-Packaged: 2017-02-04 16:37:13.561802 UTC; edd
+Packaged: 2017-03-27 11:30:45.662528 UTC; edd
 Repository: CRAN
-Date/Publication: 2017-02-04 22:38:39
+Date/Publication: 2017-03-27 13:56:10 UTC
