@@ -1,14 +1,14 @@
-8626ade2c6215cb5e1eeb8314f45969a *ChangeLog
-16de35a3f839cb5f67e55a64f5a29858 *DESCRIPTION
-0a0f7e975d3a775abca80964f17b5af3 *NAMESPACE
-50d210a58756961c7a471f20ac171416 *R/nanotime.R
+065802e906e9f9ddaa2cd1b37acf73c3 *ChangeLog
+986c85038592e170bede9b0e73808a16 *DESCRIPTION
+b5bcdd2a689bd51e00e2c02aa0696416 *NAMESPACE
+f4561a0f50e605f4f7741c823aeed833 *R/nanotime.R
 8d1c2e6345549a503a5e05d753e67569 *README.md
-f425a202c5f4fdd9ea56934941420495 *build/partial.rdb
+efae5a7ebcfac5397b3062f9740b0e2f *build/partial.rdb
 726b20da634fe98aa451eb12bd46959f *demo/00Index
 524ee00e164d537a07a28be1f0cfb8ee *demo/nanosecondDelayExample.R
-4adb7076af2484831e22014bbf2a3489 *inst/NEWS.Rd
+7e2f48be490d62cfed96fba7441c7bc4 *inst/NEWS.Rd
 9be3e641ff142bb833622b17572ce2ff *man/nanotime-package.Rd
-1b465af556e047d5a1d32368c4864c03 *man/nanotime.Rd
+dc8878eede70320520d854f0d54bbabc *man/nanotime.Rd
 22fdad0781464eb37925e754e70a041a *tests/POSIXt.R
 811ca12656f0ccae3db2faa5511139b8 *tests/data.frame.R
 6da65472a29cb151b1d14f0a1d4c4b27 *tests/simpleTests.R
