@@ -2,7 +2,7 @@ import("bit64")
 importFrom("RcppCCTZ", "parseDouble", "formatDouble")
 importFrom("zoo", "index2char")
 
-export(nanotime)
+export(nanotime, as.integer64)
 
 S3method(nanotime, default)
 S3method(nanotime, character)
@@ -21,3 +21,4 @@ S3method(as.Date, nanotime)
 S3method(as.data.frame, nanotime)
 S3method(as.integer64, nanotime)
 S3method(Ops, nanotime)
+
