@@ -2,7 +2,7 @@
 ##' Nanosecond resolution datetime functionality
 ##'
 ##' Functions to operate on nanosecond time resolution using integer64
-##' bit representation. Convertions functions for several standard R
+##' bit representation. Conversions functions for several standard R
 ##' types are provided, and more will be added as needed.
 ##'
 ##' Notice that the conversion from POSIXct explicitly sets the last
@@ -32,8 +32,8 @@
 ##' similar to \code{POSIXct} which uses fractional seconds since the
 ##' epoch---so here we are essentially having the same values, but
 ##' multiplied by 10 to the power 9 and stored as integers.  We need
-##' to rely on the external package as we require 64 bit integers
-##' whereas R itself onky has 32 bit integers.  The
+##' to rely on the external package as we require 64-bit integers
+##' whereas R itself only has 32-bit integers.  The
 ##' \code{\link{bit64}} package is clever about how it manages to
 ##' provide such an integer using only the 64-bit double type and very
 ##' clever (and efficient) transformations.
@@ -212,3 +212,14 @@ Ops.nanotime <- function(e1, e2) {
     }
     res
 }
+
+#' \code{as.integer64} conversion helper returning the underlying
+#' \code{integer64} representation
+#'
+#' @name as.integer64
+#' @usage
+#' as.integer64(x, ...)
+#'
+#' @rdname nanotime
+NULL
+
