@@ -18,6 +18,7 @@
 \alias{as.data.frame.nanotime}
 \alias{as.integer64.nanotime}
 \alias{Ops.nanotime}
+\alias{as.integer64}
 \title{Nanosecond resolution datetime functionality}
 \usage{
 nanotime(x)
@@ -54,6 +55,8 @@ nanotime(x)
 \method{as.integer64}{nanotime}(x, ...)
 
 \method{Ops}{nanotime}(e1, e2)
+
+as.integer64(x, ...)
 }
 \arguments{
 \item{x}{The object which want to convert to class \code{nanotime}}
@@ -83,8 +86,11 @@ A nanotime object
 }
 \description{
 Functions to operate on nanosecond time resolution using integer64
-bit representation. Convertions functions for several standard R
+bit representation. Conversions functions for several standard R
 types are provided, and more will be added as needed.
+
+\code{as.integer64} conversion helper returning the underlying
+\code{integer64} representation
 }
 \details{
 Notice that the conversion from POSIXct explicitly sets the last
@@ -117,8 +123,8 @@ types to represent nanoseconds relative to the epoch.  This is
 similar to \code{POSIXct} which uses fractional seconds since the
 epoch---so here we are essentially having the same values, but
 multiplied by 10 to the power 9 and stored as integers.  We need
-to rely on the external package as we require 64 bit integers
-whereas R itself onky has 32 bit integers.  The
+to rely on the external package as we require 64-bit integers
+whereas R itself only has 32-bit integers.  The
 \code{\link{bit64}} package is clever about how it manages to
 provide such an integer using only the 64-bit double type and very
 clever (and efficient) transformations.
